f5_cc_demo/f5-demo-app/f5-hello-world-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-hello-world
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: f5-hello-world
    spec:
      containers:
      - name: f5-hello-world
        image: "f5devcentral/f5-hello-world:develop"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
