f5_cc_demo/f5-demo-app/f5-hello-world-edge-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: f5-hello-world
    f5type: f5-hello-world
  name: f5-hello-world-edge-termination
  namespace: f5demo
  annotations:
    # See the k8s-bigip-ctlr documentation for information about
    # all Route Annotations
    # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-route-annotations
    virtual-server.f5.com/balance: least-connections-member
    virtual-server.f5.com/clientssl: /Common/client-ssl
    virtual-server.f5.com/serverssl: /Common/server-ssl
spec:
  host: govoseapp1.cloudmegalodon.us
  path: "/"
  port:
    targetPort: 8080
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIF4TCCBMmgAwIBAgITWQAAAApIDvcjaGrNIgAAAAAACjANBgkqhkiG9w0BAQsF
[...]
      jz/csFnPjTwgdE1dfYwWHRI3Gxc3
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEpQIBAAKCAQEA1hKCBWsZTn/tS0DBrdXcQNHDv9aZ47haSQ8wA3JCpfp3C5vB
[...]
      HRYoynJcly19+QfaJNC3qxIQC/AV2ndtMrmP2qZT1W8+gmLLBEsF3t0=
      -----END PRIVATE KEY-----
    termination: edge
    insecureEdgeTerminationPolicy: Allow

  to:
    kind: Service
    name: f5-hello-world
